@@ -796,6 +796,10 @@ extern "C" {
 #define SYSTEM_FONT 13
 #define SYSTEM_FIXED_FONT 16
 #define DEFAULT_PALETTE 15
+#if (_WIN32_WINNT >= 0x0500)
+#define DC_BRUSH	18
+#define DC_PEN	19
+#endif
 #define SYSPAL_NOSTATIC 2
 #define SYSPAL_STATIC 1
 #define SYSPAL_ERROR 0
@@ -2690,6 +2694,10 @@ UINT WINAPI SetBoundsRect(HDC,LPCRECT,UINT);
 BOOL WINAPI SetBrushOrgEx(HDC,int,int,LPPOINT);
 BOOL WINAPI SetColorAdjustment(HDC,const COLORADJUSTMENT*);
 BOOL WINAPI SetColorSpace(HDC,HCOLORSPACE);
+#if (_WIN32_WINNT >= 0x0500)
+COLORREF WINAPI SetDCBrushColor(HDC,COLORREF);
+COLORREF WINAPI SetDCPenColor(HDC,COLORREF);
+#endif
 BOOL WINAPI SetDeviceGammaRamp(HDC,PVOID);
 UINT WINAPI SetDIBColorTable(HDC,UINT,UINT,const RGBQUAD*);
 int WINAPI SetDIBits(HDC,HBITMAP,UINT,UINT,PCVOID,const BITMAPINFO*,UINT);
